@@ -1,3 +1,14 @@
+2015-02-20  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* inline.adb (Expand_Inlined_Call): Skip again calls to subprogram
+	renamings.
+	* exp_ch6.adb (Expand_Call): Use back-end inlining
+	instead of expansion for simple subprogram renamings.
+
+2015-02-20  Robert Dewar  <dewar@adacore.com>
+
+	* exp_util.adb: Minor reformatting.
+
 2015-02-20  Vincent Celier  <celier@adacore.com>
 
 	* switch-c.adb (Scan_Front_End_Switches): Do not fail when --RTS=
